--- a/ADWebApplication/Views/EmpAuth/Login.cshtml
+++ b/ADWebApplication/Views/EmpAuth/Login.cshtml
@@ -18,7 +18,7 @@
 <div class="card card-box shadow-lg">
     <div class="card-body p-4">
         <h3 class="text-center mb-1 text-primary">Secure Login</h3>
-        <p class="text-center text-muted mb-4">Admin / Collector (OTP required)</p>
+        <p class="text-center text-muted mb-4">Admin/Collector/HR</p>
 
         <form asp-action="Login" method="post">
             @Html.AntiForgeryToken()
