--- a/ADWebApplication/Views/Shared/_Layout.cshtml
+++ b/ADWebApplication/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
         @if (User.Identity != null && User.Identity.IsAuthenticated)
         {
             <div class="dropdown">
-                <button class="btn btn-outline-light dropdown-toggle rounded-pill px-4 py-2" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="border: 2px solid rgba(255,255,255,0.8);">
-                    <i class="bi bi-person-circle me-1"></i> @User.Identity.Name
+                <button class="btn btn-outline-light dropdown-toggle rounded-pill px-4 py-2" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="border: 2px solid white; font-weight: 500;">
+                    <i class="bi bi-person-circle me-2"></i>@User.Identity.Name
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                     <li><h6 class="dropdown-header">User: @User.Identity.Name</h6></li>
@@ -28,6 +28,11 @@
                     <li>
                         <a class="dropdown-item" href="@Url.Action("MyRouteAssignments", "CollectorDashboard")">
                             <i class="bi bi-map"></i> My Routes
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="@Url.Action("ReportIssue", "CollectorDashboard")">
+                            <i class="bi bi-exclamation-triangle"></i> Report Issue
                         </a>
                     </li>
                     <li><hr class="dropdown-divider"></li>
