--- a/ADWebApplication/Views/Admin/CollectionOfficerSchedule.cshtml
+++ b/ADWebApplication/Views/Admin/CollectionOfficerSchedule.cshtml
@@ -11,14 +11,15 @@
     </h2>
 </div>
 
-<div class="d-flex justify-content-between align-items-center mb-3">
-    <div class="input-group w-auto">
+<div class="d-flex align-items-center mb-3">
+    <div class="input-group w-auto ms-auto">
         <span class="input-group-text">
             <i class="bi bi-search"></i>
         </span>
-        <input type="text" id="searchBox" class="form-control" placeholder="Search..." onkeyup="filterTable()" />
+        <input type="text" id="searchBox" class="form-control" placeholder="Search..." onkeyup="filterTable()"/>
     </div>
 </div>
+
 
 <table id="routeHistoryTable" class="table table-striped table-bordered align-middle">
     <thead class="table-primary">
