updated collcetion officer calendar view

--- a/ADWebApplication/Views/Admin/CollectionOfficerRoster.cshtml
+++ b/ADWebApplication/Views/Admin/CollectionOfficerRoster.cshtml
@@ -30,7 +30,7 @@
 
     <div class="d-flex align-items-center gap-2">
         <a href="@Url.Action("CollectionCalendar", "Admin")"
-        class="btn btn-primary d-flex align-items-center justify-content-center">
+        class="btn btn-success d-flex align-items-center justify-content-center">
             <i class="bi bi-calendar-event me-1"></i>
             Collection Calendar
         </a>
@@ -68,14 +68,8 @@
                     class="bi bi-arrow-down-up"></i></th>
             <th id="emailHeader" class="sortable" onclick="sortTable(3)">Email <i class="bi bi-arrow-down-up"></i></th>
             <th id="roleHeader" class="sortable" onclick="sortTable(4)">Role <i class="bi bi-arrow-down-up"></i></th>
-<<<<<<< HEAD
             <th id="statusHeader" class="sortable" onclick="sortTable(5)">Status <i class="bi bi-arrow-down-up"></i></th>
             <th class = "text-center">Actions</th>
-=======
-            <th id="statusHeader" class="sortable" onclick="sortTable(5)">Status <i class="bi bi-arrow-down-up"></i>
-            </th>
-            <th>Actions</th>
->>>>>>> d447b27a6afaccf07a0e167fb2854e02581c8f55
         </tr>
     </thead>
     <tbody>
