--- a/ADWebApplication/Views/Admin/CollectionOfficerSchedule.cshtml
+++ b/ADWebApplication/Views/Admin/CollectionOfficerSchedule.cshtml
@@ -12,13 +12,24 @@
 </div>
 
 <div class="d-flex align-items-center mb-3">
+    <!-- Back Button -->
+    <button class="btn btn-outline-secondary me-3" onclick="history.back()">
+        <i class="bi bi-arrow-left"></i> Back
+    </button>
+
+    <!-- Search Bar -->
     <div class="input-group w-auto ms-auto">
         <span class="input-group-text">
             <i class="bi bi-search"></i>
         </span>
-        <input type="text" id="searchBox" class="form-control" placeholder="Search..." onkeyup="filterTable()" />
+        <input type="text"
+               id="searchBox"
+               class="form-control"
+               placeholder="Search..."
+               onkeyup="filterTable()" />
     </div>
 </div>
+
 
 
 <table id="routeHistoryTable" class="table table-striped table-bordered align-middle">
