Updated rewards catalogue management.

--- a/ADWebApplication/Views/Shared/_DashboardLayout.cshtml
+++ b/ADWebApplication/Views/Shared/_DashboardLayout.cshtml
@@ -52,7 +52,12 @@
                 <a class="dash-link @(currentController == "Campaign" ? "active" : "")" 
                 asp-controller="Campaign" asp-action="Index">
                 <i class="bi bi-gift"></i> 
-                Incentive & Rewards
+                Incentive Campaigns Management
+                </a>
+                <a class="dash-link @(currentController == "RewardCatalogue" ? "active" : "")" 
+                asp-controller="RewardCatalogue" asp-action="Index">
+                <i class="bi bi-gift"></i> 
+                Rewards Catalogue Management
                 </a>
                 <a class="dash-link" href="#"><i class="bi bi-clipboard-data"></i> Analysis & Report</a>
                 <a class="dash-link" href="#"><i class="bi bi-people"></i> Collection Officers</a>
