added a 'onKeyPress|onKeyDown|onKeyUp' attribute to <th> tags

--- a/ADWebApplication/Views/Admin/Bins.cshtml
+++ b/ADWebApplication/Views/Admin/Bins.cshtml
@@ -60,7 +60,11 @@
                     Address <i class="bi bi-arrow-down-up"></i>
                 </button>
             </th>
-            <th class="text-nowrap text-center" onclick="sortTable(4)">Capacity <i class="bi bi-arrow-down-up"></i></th>
+            <th class="text-nowrap text-center">
+                <button type="button" class="btn btn-link p-0" onclick="sortTable(4)">
+                    Capacity <i class="bi bi-arrow-down-up"></i>
+                </button>
+            </th>
             <th class="text-nowrap" style="max-width: 100px;"> 
                 <button type="button" class="btn btn-link p-0" onclick="sortTable(5)">
                     Status <i class="bi bi-arrow-down-up"></i>
