renamed our shared layouts for admin/collector

--- a/ADWebApplication/Views/AdminRoutePlanning/Index.cshtml
+++ b/ADWebApplication/Views/AdminRoutePlanning/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Route Management";
-    Layout = "_DashboardLayout";
+    Layout = "_AdminLayout";
 
     var activeOfficerIds = Model.AllStops
     .Select(s => s.RouteKey)
