--- a/ADWebApplication/wwwroot/css/dashboard.css
+++ b/ADWebApplication/wwwroot/css/dashboard.css
@@ -214,7 +214,7 @@ body {
 
 .stat-card .icon-wrapper.green {
   background: #d4edda;
-  color: #1e7e34;
+  color: #23ae43;
 }
 
 .stat-card .icon-wrapper.purple {
