--- a/ADWebApplication/Views/CollectorDashboard/MyRouteAssignments.cshtml
+++ b/ADWebApplication/Views/CollectorDashboard/MyRouteAssignments.cshtml
@@ -300,7 +300,7 @@
             <div class="drawer-label">Progress</div>
             <div class="drawer-value" id="drawerProgressText">0/0 bins completed</div>
             <div class="progress" style="height: 10px;">
-                <div class="progress-bar bg-success" id="drawerProgressBar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <progress class="progress-bar bg-success" id="drawerProgressBar" style="width: 0%" value="0" max="100" aria-label="Assignment completion progress"></progress>
             </div>
         </div>
 
